# numerology-bot

./: .dockerignore  .env.example  .gitignore  .gitleaks.toml  CLAUDE.md  CONTRIBUTING.md  Dockerfile  LICENSE  NOTES.md  OPEN_QUESTIONS.md  README.md  alembic.ini  docker-compose.yml  pyproject.toml
.github/: PULL_REQUEST_TEMPLATE.md
.github/ISSUE_TEMPLATE/: bug.md  feature.md
.github/workflows/: ci.yml
bot/: __init__.py  catalog_data.py  config.py  delivery.py  main.py  texts.py
bot/handlers/: __init__.py  admin.py  catalog.py  daily.py  diag.py  language.py  payment.py  results.py  start.py  survey.py  ton_payment.py
bot/keyboards/: __init__.py
bot/states/: __init__.py  daily.py  survey.py
core/: __init__.py  charts.py  db.py  i18n.py  models.py  pdf.py  render.py  repositories.py  validators.py
core/content/: __init__.py  loader.py
core/content/data/: behavior_codes.json  (+1 more)
core/numerology/: __init__.py  _digits.py  biorhythm.py  codes.py  daily.py  karma_events.py  matrix.py  moon_sun.py  name.py  person.py  psychomatrix.py  report.py  tariffs.py
core/payments/: __init__.py  crypto_pay.py
docker/: entrypoint.sh
docs/: TZ_CHECKLIST.md  architecture.md  content-extraction-map.md  deploy.md  excel-analysis.md  raschet-audit.md  roadmap.md  setup.md
docs/handoffs/: 2026-06-06-1-launch.md
migrations/: README.md  env.py
migrations/versions/: __init__.py  a1b2c3d4e5f6_add_price_tenge.py  b2c3d4e5f6a7_add_user_locale.py  e47bb79859ce_init_schema.py
scripts/: backup_db.sh  check_crypto_pay.py  demo_report.py  extract_texts.py
tests/: conftest.py  test_admin_catalog.py  test_biorhythm.py  test_catalog_routing.py  test_charts.py  test_codes.py  test_daily.py  test_delivery.py  test_forecast_texts.py  test_karma_events.py  test_matrix.py  test_moon_sun.py  test_name.py  test_payment_handler.py  test_pdf.py  test_psychomatrix.py  test_render.py  test_report.py  test_repositories.py  test_start.py  test_structure.py  test_survey_conformance.py  test_survey_flow.py  test_tariffs.py  test_ton_payment.py  test_validators.py
tests/fixtures/: biorhythm_1990_02_20.json  biorhythm_1994_05_28.json  biorhythm_2000_01_01.json  codes_examples.json  forecast_1990_02_20.json  moon_sun_1990_02_20.json  name_examples.json  psychomatrix_1990_02_20.json  psychomatrix_1994_05_28.json  psychomatrix_2000_01_01.json
(+101 files in other folders)
