[project]
name = "numerology-bot"
version = "0.1.0"
description = "Telegram-бот нумерологической матрицы с оплатой через Telegram Stars"
requires-python = ">=3.12"
license = { text = "MIT" }
dependencies = [
    "aiogram>=3.13",
    "sqlalchemy[asyncio]>=2.0",
    "asyncpg>=0.29",
    "psycopg[binary]>=3.1",
    "alembic>=1.13",
    "pydantic-settings>=2.4",
    "python-dateutil>=2.9",
    "reportlab>=4.2",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.0",
    "pytest-asyncio>=0.24",
    "aiosqlite>=0.20",
    "ruff>=0.6",
    "black>=24.0",
]
excel = [
    "openpyxl>=3.1",
]

[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
include = ["bot*", "core*"]

[tool.setuptools.package-data]
"core.content" = [
    "data/*.json",
    "data/texts/*.json",
    "data/texts_kk/*.json",
    "data/texts_en/*.json",
    "data/i18n/*.json",
]
"core" = ["assets/fonts/*.ttf"]

[tool.ruff]
line-length = 100
target-version = "py312"

[tool.ruff.lint]
per-file-ignores = { "core/i18n.py" = ["E501"], "core/content/data/**" = ["E501"] }
select = ["E", "F", "I", "UP", "B", "ASYNC"]

[tool.black]
line-length = 100
target-version = ["py312"]

[tool.pytest.ini_options]
testpaths = ["tests"]
asyncio_mode = "auto"
